--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ button{
     border-radius: 5px;
     cursor: pointer;
 }
+
+
 .result{
     display: none;
     margin-top: 20px;
@@ -50,22 +52,24 @@ button{
 }
 
 
+@media only screen and (min-width: 1000px){
+    .container{
+        margin: 25vh auto;
+        /* transform: translateX(-5vw); */
+    }
+}
 @media only screen and (min-width: 768px){
     .container{
-        margin: 35vh auto;
+        margin: 20vh auto;
     }
 }
 
-/* For tablet */
-@media only screen and (min-width: 600px){
-    .container{
-        margin: 35vh auto;
-    }
-}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .container{
-        margin: 35vh auto;
+        margin: 25vh auto;
+        width: 300px;
+        zoom: 90%;
     }
 }
